tests/valid/coupling_variable_map_identity_units_match.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "CouplingVariableMapIdentityUnitsMatch",
    "description": "Valid (esm-spec §4.7.6): a variable_map coupling with transform=='identity' between two variables whose DECLARED units are identical (both K) flattens cleanly with no DomainUnitMismatch. Matching (or absent) units are legal under the identity mapping.",
    "authors": ["Chris Tessum with Claude"],
    "created": "2026-07-12T00:00:00Z"
  },

  "models": {
    "SystemA": {
      "variables": {
        "temperature": { "type": "state", "units": "K", "default": 298.15, "description": "Source temperature (kelvin)" },
        "source": { "type": "parameter", "units": "K/s", "default": 0.0, "description": "Heating rate (dimensionally consistent RHS)" }
      },
      "equations": [
        { "lhs": { "op": "D", "args": ["temperature"], "wrt": "t" }, "rhs": "source" }
      ]
    },
    "SystemB": {
      "variables": {
        "temperature": { "type": "parameter", "units": "K", "default": 298.15, "description": "Target temperature (kelvin)" }
      },
      "equations": []
    }
  },

  "coupling": [
    { "type": "variable_map", "from": "SystemA.temperature", "to": "SystemB.temperature", "transform": "identity" }
  ]
}
